[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/tank.gd" type="Script" id=1]
[ext_resource path="res://textures/tanks.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "tracks0"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource_name = "tracks1"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[node name="tank" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
type = 0
lavel = 0
life = 1
invincible = false

[node name="tracksAnim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/tracks0 = SubResource( 1 )
anims/tracks1 = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="rays" type="Node2D" parent="."]

editor/display_folded = true

[node name="rayUp" type="RayCast2D" parent="rays"]

position = Vector2( -13, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -50 )
collision_mask = 1

[node name="rayUp1" type="RayCast2D" parent="rays"]

position = Vector2( 13, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -50 )
collision_mask = 1

[node name="rayDown" type="RayCast2D" parent="rays"]

position = Vector2( -13, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="rayDown1" type="RayCast2D" parent="rays"]

position = Vector2( 13, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="rayLeft" type="RayCast2D" parent="rays"]

position = Vector2( 0, -13 )
enabled = true
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 1

[node name="rayLeft1" type="RayCast2D" parent="rays"]

position = Vector2( 0, 13 )
enabled = true
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 1

[node name="rayRight" type="RayCast2D" parent="rays"]

position = Vector2( 0, -13 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 1

[node name="rayRight1" type="RayCast2D" parent="rays"]

position = Vector2( 0, 13 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 1

[node name="Sprite" type="Sprite" parent="."]

scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="muzzle" type="Position2D" parent="Sprite"]

position = Vector2( 0, -136 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visible = false
shape = SubResource( 3 )

[node name="step" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="fireTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Label" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.078125, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="step" to="." method="_on_step_timeout"]

[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]


